# this file is meant to be included by the parent CMakeFiles.txt
install(FILES
	icons/ActionDelete.svg
	icons/ActionMenuEject.svg
	icons/ActionFastForward.svg
	icons/ActionMenuPause.svg
	icons/ActionMenuPlay.svg
	icons/ActionMenuStop.svg
	icons/ActionMove.svg
	icons/ActionNone.svg
	icons/ActionResizeRotate.svg
	icons/ActionResize.svg
	icons/ActionRotate.svg
	icons/ActionSetNumber.svg
	icons/ActionUndo.svg
	icons/IconBold.svg
	icons/IconItalics.svg
	icons/IconModified.svg
	icons/IconNewline.svg
	icons/IconSetPhone.svg
	icons/ProxyMove.svg
	icons/ProxyResizeHori.svg
	icons/ProxyResizeTotal.svg
	icons/ProxyResizeVerti.svg
	icons/ProxyRotate.svg
	icons/StatusFail.svg
	icons/StatusFF.svg
	icons/StatusPause.svg
	icons/StatusPlay.svg
	icons/StatusProblem.svg
	icons/StatusStop.svg

	DESTINATION ${TBE_IMAGES_DIR}
)
