# this file is meant to be included by the parent CMakeFiles.txt
install(FILES
	icons/ActionClone.svg
 	icons/ActionCollisionOK.svg
	icons/ActionCollisionWrong.svg
	icons/ActionDelete.svg
	icons/ActionDrawDebug.svg
	icons/ActionDrawNormal.svg
	icons/ActionMenuEject.svg
	icons/ActionFastForward.svg
	icons/ActionGoals.svg
	icons/ActionMenuPause.svg
	icons/ActionMenuPlay.svg
	icons/ActionMenuStop.svg
	icons/ActionResizeRotate.svg
	icons/ActionResize.svg
	icons/ActionResizeHori.svg
        icons/ActionResizeHorizontally.svg
	icons/ActionResizeVerti.svg
        icons/ActionResizeVertically.svg
	icons/ActionReturnToolbox.svg
	icons/ActionRotate.svg
	icons/ActionSetNumber.svg
	icons/ActionUndo.svg
	icons/EmptyGroup.svg
	icons/IconBold.svg
	icons/IconInfo.svg
	icons/IconItalics.svg
	icons/IconModified.svg
	icons/IconNewline.svg
	icons/Status4F.svg
	icons/StatusFail.svg
	icons/StatusFF.svg
	icons/StatusPause.svg
	icons/StatusPlay.svg
	icons/StatusProblem.svg
	icons/StatusSlow.svg
	icons/StatusStop.svg
        icons/StatusWon.svg


	DESTINATION ${TBE_IMAGES_DIR}
)
