# this file is meant to be included by the parent CMakeFiles.txt
install(FILES
        style/ChoosePhoneNumber.svg
        style/IconDelete.svg
        style/LevelInfo.svg
        style/Shrink.svg
        style/SimulationButtonInverted.png
        style/SimulationButtonNormal.png
	style/SimulationControlsButtonFrame.svg
	style/SimulationControlsLabelFrame.svg
        style/TextButtonHighlighted.png
        style/TextButtonInverted.png
        style/TextButtonNormal.png
        style/WinFail.svg
	DESTINATION ${TBE_IMAGES_DIR}
)
