SET(box2d_SOURCES 
    b2BlockAllocator.cpp 
    b2Body.cpp 
    b2BroadPhase.cpp 
    b2CircleContact.cpp 
    b2CircleShape.cpp 
    b2CollideCircle.cpp 
    b2CollidePolygon.cpp 
    b2Collision.cpp 
    b2Contact.cpp 
    b2ContactManager.cpp 
    b2ContactSolver.cpp 
    b2Distance.cpp 
    b2DistanceJoint.cpp 
    b2DynamicTree.cpp 
    b2Fixture.cpp 
    b2FrictionJoint.cpp 
    b2GearJoint.cpp 
    b2Island.cpp 
    b2Joint.cpp 
    b2LineJoint.cpp 
    b2Math.cpp 
    b2MouseJoint.cpp 
    b2PolygonAndCircleContact.cpp 
    b2PolygonContact.cpp 
    b2PolygonShape.cpp 
    b2PrismaticJoint.cpp 
    b2PulleyJoint.cpp 
    b2RevoluteJoint.cpp 
    b2Settings.cpp 
    b2StackAllocator.cpp 
    b2TimeOfImpact.cpp 
    b2TOISolver.cpp 
    b2WeldJoint.cpp 
    b2WorldCallbacks.cpp 
    b2World.cpp
)

ADD_LIBRARY(box2d ${box2d_SOURCES})
